--- a/html/index/flags.html
+++ b/html/index/flags.html
@@ -1,4 +1,9 @@
-<div ng-repeat="iso in flags" class="flag" style="text-align: center;">
+<div
+  ng-repeat="iso in flags"
+  class="flag"
+  style="text-align: center;"
+  ng-class="iso"
+>
   <span class="flag-icon" ng-class="'flag-icon-' + iso"></span><br />
-  {{ commercialTlds[iso] || iso }}
+  {{ iso }}
 </div>
