--- a/html/index/filters.html
+++ b/html/index/filters.html
@@ -2,7 +2,9 @@
   <div
     class="char level1"
     ng-repeat="e in levels1"
-    ng-click="selectLang(e);"
+    ng-click="selectChar(e);"
+    ng-mouseover="mouseOverChar(e);"
+    ng-mouseleave="mouseLeaveChar(e);"
     ng-class="[e.selected ? 'selected': '', 'count' + e.count, 'match_ratio' + e.match_ratio, 'match' + e.match, !e.selected && e.match == flags.length ? 'full_match': '']"
   >
     {{ e.value }}
@@ -10,7 +12,9 @@
   <div
     class="char level2"
     ng-repeat="e in levels2"
-    ng-click="selectLang(e);"
+    ng-click="selectChar(e);"
+    ng-mouseover="mouseOverChar(e);"
+    ng-mouseleave="mouseLeaveChar(e);"
     ng-class="[e.selected ? 'selected': '', 'count' + e.count, 'match_ratio' + e.match_ratio, 'match' + e.match, !e.selected && e.match == flags.length ? 'full_match': '']"
   >
     {{ e.value }}
@@ -18,14 +22,16 @@
   <div
     class="char level3"
     ng-repeat="e in levels3"
-    ng-click="selectLang(e);"
+    ng-click="selectChar(e);"
+    ng-mouseover="mouseOverChar(e);"
+    ng-mouseleave="mouseLeaveChar(e);"
     ng-class="[e.selected ? 'selected': '', 'count' + e.count, 'match_ratio' + e.match_ratio, 'match' + e.match]"
   >
     {{ e.value }}
   </div>
   <ng-include
     src="'html/filter.html'"
-    ng-repeat="e in languageGroups"
+    ng-repeat="e in languages.groups"
   ></ng-include>
 </div>
 <ng-include src="'html/filter.html'" ng-repeat="e in filters"></ng-include>
