Replace signs.js data by thematics.yml

--- a/html/figure.html
+++ b/html/figure.html
@@ -1,4 +1,8 @@
-<div ng-if="e.fig" ng-style="{'color': e.fig[1], 'background-color': e.fig[2]}">
+<div
+  ng-if="e.fig"
+  ng-style="{'color': e.fig[1], 'background-color': e.fig[2]}"
+  style="display: inline-block;"
+>
   {{ e.fig[0] }}
 </div>
 <img
