--- a/html/index/flags.html
+++ b/html/index/flags.html
@@ -1,9 +1,11 @@
-<div
-  ng-repeat="iso in flags"
-  class="flag"
-  style="text-align: center;"
-  ng-class="iso"
->
-  <span class="flag-icon" ng-class="'flag-icon-' + iso"></span><br />
-  {{ iso }}
-</div>
+<center>
+  <div
+    ng-repeat="iso in flags"
+    class="flag"
+    style="text-align: center;"
+    ng-class="iso"
+  >
+    <span class="flag-icon" ng-class="'flag-icon-' + iso"></span><br />
+    {{ iso }}
+  </div>
+</center>
