--- a/html/index/toggles.html
+++ b/html/index/toggles.html
@@ -6,6 +6,7 @@
 >
   {{ item.name }}
   <img src="images/{{ item.image }}" style="height: 48px;" ng-if="item.image" />
+  <img src="{{ item.image2 }}" style="height: 48px;" ng-if="item.image2" />
 </div>
 <div
   class="button"
