--- a/html/filter.html
+++ b/html/filter.html
@@ -9,6 +9,7 @@
   <span>
     <span class="text" ng-if="e.name">{{ e.name }}</span>
     <ng-include
+      class="figure"
       src="'html/figure.html'"
       ng-repeat="e in [e.fig && e.fig.type ? e.fig: e]"
       ng-init="img_style = {'max-width': e.width || 48, 'max-height': e.width || 48}"
