--- a/html/filter.html
+++ b/html/filter.html
@@ -5,6 +5,7 @@
   ng-click="selectFilter(e);"
   ng-mouseover="mouseOverFilter(e);"
   ng-mouseleave="mouseLeaveFilter(e);"
+  title="File: {{ e.file }}"
 >
   <span>
     <span class="text" ng-if="e.name">{{ e.name }}</span>
