--- a/html/figure.html
+++ b/html/figure.html
@@ -11,7 +11,7 @@
   src="images/{{ e.image }}"
   ng-class="imageClass(e)"
   ng-style="img_style"
-  title="--- Image: {{ e.image }} // File: {{ e.file }}"
+  title="--- Image: {{ e.image }}"
 />
 
 <img
@@ -19,27 +19,25 @@
   src="{{ e.image2 }}"
   ng-class="imageClass(e)"
   ng-style="img_style"
-  title="--- Image: {{ e.image2 }} // File: {{ e.file }}"
+  title="--- Image: {{ e.image2 }}"
 />
 
 <ng-include
   ng-if="e.svg[0] == 'poll1'"
   src="'html/poll/poll1.html'"
-  title="--- poll1 // File: {{ e.file }}"
+  title="--- poll1"
   class="poll"
 ></ng-include>
 
 <ng-include
   ng-if="e.svg[0] == 'turn'"
   src="'html/sign/turn.html'"
-  title="--- turn // File: {{ e.file }}"
   class="turn"
 ></ng-include>
 
 <ng-include
   ng-if="e.type == 'bollard'"
   src="'html/bollard/bollard.html'"
-  title="--- bollard // File: {{ e.file }}"
   class="bollard"
 ></ng-include>
 
@@ -47,7 +45,7 @@
   ng-repeat="code in ['cz', 'ec1', 'ec2', 'pl', 'rs']"
   ng-if="e.type == 'bollard_' + code"
   src="'html/bollard/' + code + '.html'"
-  title="--- bollard_{{ code }} // File: {{ e.file }}"
+  title="--- bollard_{{ code }}"
   class="bollard"
 ></ng-include>
 
@@ -56,7 +54,7 @@
   height="48"
   ng-if="e.svg[0] == 'square'"
   xmlns="http://www.w3.org/2000/svg"
-  title="--- square // File: {{ e.file }}"
+  title="--- square"
 >
   <g transform="translate(24, 0) scale(1.4)">
     <rect
