--- a/html/index/tbody.html
+++ b/html/index/tbody.html
@@ -3,6 +3,7 @@
   <td>{{ commercialTlds[iso] || iso }}</td>
   <td class="names">{{ countries[iso][0] }}</td>
   <td class="names">{{ countries[iso][1] }}</td>
+  <td>{{ weightFlags[iso]/sumWeight*100|number:0 }}%</td>
   <td class="">{{ texts[iso].join(" ") }}</td>
   <!--
           <td>{{ tips[iso] }}</td>
