--- a/html/figure.html
+++ b/html/figure.html
@@ -11,7 +11,7 @@
   src="images/{{ e.image }}"
   ng-class="e.imageClass"
   ng-style="img_style"
-  title="--- Image: {{ e.image }}"
+  title="{{ e.title }}"
 />
 
 <img
@@ -19,13 +19,13 @@
   src="{{ e.image2 }}"
   ng-class="e.imageClass"
   ng-style="img_style"
-  title="--- Image: {{ e.image2 }}"
+  title="{{ e.title }}"
 />
 
 <ng-include
   ng-if="e.svg[0] == 'poll1'"
   src="'html/poll/poll1.html'"
-  title="--- poll1"
+  title="{{ e.title }}"
   class="poll"
 ></ng-include>
 
@@ -33,6 +33,7 @@
   ng-if="e.svg[0] == 'turn'"
   src="'html/sign/turn.html'"
   class="turn"
+  title="{{ e.title }}"
 ></ng-include>
 
 <ng-include
@@ -54,7 +55,6 @@
   height="48"
   ng-if="e.svg[0] == 'square'"
   xmlns="http://www.w3.org/2000/svg"
-  title="--- square"
 >
   <g transform="translate(24, 0) scale(1.4)">
     <rect
