--- a/html/filter.html
+++ b/html/filter.html
@@ -11,7 +11,7 @@
   ng-click="selectFilter(e);"
   ng-mouseover="mouseOverFilter(e);"
   ng-mouseleave="mouseLeaveFilter(e);"
-  title="{{ e.title }}"
+  title="{{ e.title || e.image || e.image2 }}"
 >
   <span>
     <span class="text" ng-if="e.name">{{ e.name }}</span>
