--- a/html/index/toggles.html
+++ b/html/index/toggles.html
@@ -15,6 +15,6 @@
 >
   <ng-include
     ng-init="e = { svg: ['turn', 'white', 'gray'] }"
-    src="'html/sign/turn.html'"
+    src="'html/figure.html'"
   ></ng-include>
 </div>
