--- a/html/index/flags.html
+++ b/html/index/flags.html
@@ -7,5 +7,8 @@
   >
     <span class="flag-icon" ng-class="'flag-icon-' + iso"></span><br />
     {{ iso }}
+    <span ng-if="sumWeight > 0"
+      ><br />{{ weightFlags[iso]/sumWeight*100|number:0 }}%</span
+    >
   </div>
 </center>
