--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           "
         >
           <ng-include src="'html/index/toggles.html'"></ng-include>
-          <div style="float: right;">
+          <div style="float: right; padding-right: 200px;">
             <div
               class="btn btn-lg btn-link"
               ng-click="toggledClasses.saveFiltersEnabled = !toggledClasses.saveFiltersEnabled"
