--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
     <link href="./css/flag-icon.css" rel="stylesheet" />
     <link href="./css/styles.css" rel="stylesheet" />
-    <script src="js/app2.js"></script>
+    <script src="js/app.js"></script>
   </head>
   <body>
     <table ng-class="toggledClasses">
