Custom filters chars, optimizations

--- a/html/index/custom_filters.html
+++ b/html/index/custom_filters.html
@@ -18,6 +18,7 @@
     {{ item.filters.length }} filters
   </td>
   <td>
+    {{ item.chars }}
     <span ng-repeat="record in item.filters">
       <span
         ng-if="e"
