--- a/html/index/tbody.html
+++ b/html/index/tbody.html
@@ -1,4 +1,7 @@
-<tr ng-repeat="iso in flags|limitTo:1">
+<tr
+  ng-repeat="iso in flags"
+  ng-if="weightFlags[iso] >= minWeight && weightFlags[iso] >= weights2[0]"
+>
   <td><span class="flag-icon" ng-class="'flag-icon-' + iso"></span></td>
   <td>{{ commercialTlds[iso] || iso }}</td>
   <td class="names">{{ countries[iso][0] }}</td>
