--- a/html/index/filters.html
+++ b/html/index/filters.html
@@ -1,4 +1,4 @@
-<div class="mycontainer">
+<div class="mycontainer" style="min-height: 150px;">
   <div
     class="char level1"
     ng-repeat="e in levels1"
