--- a/html/index/flags.html
+++ b/html/index/flags.html
@@ -23,39 +23,24 @@
   </div>
   &nbsp;
   <div class="buttons filters" style="display: inline;">
-    <div
-      class="char level1"
-      ng-if="e.selected"
+    <ng-include
+      src="'html/char.html'"
       ng-repeat="e in levels1"
-      ng-click="selectChar(e);"
-      ng-mouseover="mouseOverChar(e);"
-      ng-mouseleave="mouseLeaveChar(e);"
-      ng-class="[e.selected ? 'selected': '', 'count' + e.count, 'match_ratio' + e.match_ratio, 'match' + e.match, !e.selected && e.match == flags.length ? 'full_match': '']"
-    >
-      {{ e.value }}
-    </div>
-    <div
-      class="char level2"
+      ng-init="level = 1"
       ng-if="e.selected"
+    ></ng-include>
+    <ng-include
+      src="'html/char.html'"
       ng-repeat="e in levels2"
-      ng-click="selectChar(e);"
-      ng-mouseover="mouseOverChar(e);"
-      ng-mouseleave="mouseLeaveChar(e);"
-      ng-class="[e.selected ? 'selected': '', 'count' + e.count, 'match_ratio' + e.match_ratio, 'match' + e.match, !e.selected && e.match == flags.length ? 'full_match': '']"
-    >
-      {{ e.value }}
-    </div>
-    <div
-      class="char level3"
+      ng-init="level = 2"
       ng-if="e.selected"
+    ></ng-include>
+    <ng-include
+      src="'html/char.html'"
       ng-repeat="e in levels3"
-      ng-click="selectChar(e);"
-      ng-mouseover="mouseOverChar(e);"
-      ng-mouseleave="mouseLeaveChar(e);"
-      ng-class="[e.selected ? 'selected': '', 'count' + e.count, 'match_ratio' + e.match_ratio, 'match' + e.match]"
-    >
-      {{ e.value }}
-    </div>
+      ng-init="level = 3"
+      ng-if="e.selected"
+    ></ng-include>
     <ng-include
       src="'html/filter.html'"
       ng-if="e.selected"
