--- a/html/index/custom_filters.html
+++ b/html/index/custom_filters.html
@@ -4,16 +4,15 @@
   </td>
 </tr>
 <tr>
-  <td colspan="5"></td>
-  <th ng-repeat="e in allFilters" ng-if="e.customCount > 1">
+  <td colspan="3" rowspan="4" style="background-color: #aaa;"></td>
+  <th ng-repeat="e in allFilters" ng-if="e.customCount > 1 && e.customDiff > 0">
     <span class="label label-primary">{{ e.file }}</span><br />
     #{{ e.index }}
   </th>
-  <td colspan="50"></td>
+  <td colspan="50" rowspan="4" style="background-color: #aaa;"></td>
 </tr>
 <tr>
-  <td colspan="5"></td>
-  <th ng-repeat="e in allFilters" ng-if="e.customCount > 1">
+  <th ng-repeat="e in allFilters" ng-if="e.customCount > 1 && e.customDiff > 0">
     <span ng-if="e.name">{{ e.name }}</span>
     <ng-include
       class="figure"
@@ -22,21 +21,16 @@
       ng-init="img_style = {'max-width': 'e.width || 48', 'max-height': e.width || 48}"
     ></ng-include>
   </th>
-  <td colspan="50"></td>
 </tr>
 <tr>
-  <td colspan="5"></td>
-  <td ng-repeat="e in allFilters" ng-if="e.customCount > 1">
+  <td ng-repeat="e in allFilters" ng-if="e.customCount > 1 && e.customDiff > 0">
     {{ e.customDiff }}
   </td>
-  <td colspan="50"></td>
 </tr>
 <tr class="isos">
-  <td colspan="5"></td>
-  <td ng-repeat="e in allFilters" ng-if="e.customCount > 1">
+  <td ng-repeat="e in allFilters" ng-if="e.customCount > 1 && e.customDiff > 0">
     {{ customIsos(e).join(",") }}
   </td>
-  <td colspan="50"></td>
 </tr>
 <tr
   ng-repeat="item in customFilters|orderBy:'-'"
@@ -44,14 +38,12 @@
   ng-if="view == 'manageCustomFilter' || loaded.custom_filters"
   ng-init="loaded.custom_filters = true;"
 >
-  <td><span class="flag-icon" ng-class="'flag-icon-' + item.iso"></span></td>
-  <td>{{ commercialTlds[item.iso] || item.iso }}</td>
-  <td class="names">{{ countries[item.iso][0] }}</td>
-  <td class="names">{{ countries[item.iso][1] }}</td>
   <td ng-style="{'text-decoration': item.deleted ? 'line-through': ''}">
-    {{ item.date }}
+    <span class="flag-icon" ng-class="'flag-icon-' + item.iso"></span>
   </td>
   <td ng-style="{'text-decoration': item.deleted ? 'line-through': ''}">
+    {{commercialTlds[item.iso] || item.iso}}<br />
+    {{item.date|date:"yyyy-MM-dd"}}<br />
     {{ item.filters.length }} filters
   </td>
   <td>
@@ -68,7 +60,7 @@
       Cancel
     </div>
   </td>
-  <td ng-repeat="e in allFilters" ng-if="e.customCount > 1">
+  <td ng-repeat="e in allFilters" ng-if="e.customCount > 1 && e.customDiff > 0">
     <span
       ng-if="e.customIsos[item.iso]"
       class="glyphicon glyphicon-plus-sign text-success"
@@ -100,18 +92,20 @@
     >
       <span
         ng-if="e"
+        ng-show="e.customIsos[item.iso]"
         ng-repeat="e in [record.filter]"
         class="customFilter"
         ng-class="e.customIsos[item.iso] ? 'overwrite': ''"
         title="{{ e.title }}"
       >
-        <div>
+        <div class="file">
           <span class="label label-primary"
             >{{ record.filter.file }}#{{ record.filter.index }}</span
           >
         </div>
         <span ng-if="e.name">{{ e.name }}</span>
         <ng-include
+          ng-if="record.filter.customIsos[item.iso]"
           class="figure"
           src="'html/figure.html'"
           ng-repeat="e in [e.fig && e.fig.type ? e.fig: e]"
@@ -140,8 +134,8 @@
         <li ng-if="!record.filter">
           type "{{ record.filterType }}"
           <span ng-if="record.name">({{ record.name }})</span>
-          <span ng-if="record.title">({{ record.title }})</span> [{{ record.file
-          }}]
+          <span ng-if="record.title">({{ record.title }})</span>
+          [{{record.file}}]
 
           <ng-include
             class="figure"
@@ -152,6 +146,20 @@
         </li>
       </ul>
       <strong>It seems that data may be outdated.</strong>
+    </div>
+  </td>
+  <td>
+    <div
+      class="btn btn-danger glyphicon glyphicon-trash"
+      ng-show="!item.deleted"
+      ng-click="item.deleted = true; updateCustomFilter(item);"
+    ></div>
+    <div
+      class="btn btn-success glyphicon glyphicon-repeat"
+      ng-show="item.deleted"
+      ng-click="item.deleted = false; updateCustomFilter(item);"
+    >
+      Cancel
     </div>
   </td>
 </tr>
