--- a/html/index/flags.html
+++ b/html/index/flags.html
@@ -6,9 +6,7 @@
     style="text-align: center;"
     ng-class="[iso, exactMatchFlags[iso] ? 'exactMatch': '']"
   >
-    <span class="flag-icon" ng-class="'flag-icon-' + iso">
-      <ng-include src="'html/flag/flag.html'"></ng-include>
-    </span>
+    <span class="flag-icon" ng-class="'flag-icon-' + iso"></span>
     <br />
     {{ iso }}
     <span ng-if="sumWeight > 0"
